end of lab 6 but no styling for stretch goal

--- a/products/index.html
+++ b/products/index.html
@@ -12,13 +12,7 @@
 <body>
     <h1>Sam's Veggie Stand</h1>
     <h2>Veggies for Sale</h2>
-    <li id="veggie-list"></li>
-    <!-- <li id="spinach" class="veggie-box">
-        <div class="name"></div>
-        <div> <img id='image' src="/images-veggie/spinach.png" alt="a bunch of spinach"></div>
-        <div class="price"></div>
-        <button class='button' id="spinach">Add</button>
-    </li> -->
+    <ul id="veggie-list"></ul>
     <script type='module' src="products.js"></script>
 </body>
 
