created shopping cart html lab 7 step one

--- a/shopping-cart/index.html
+++ b/shopping-cart/index.html
@@ -8,15 +8,20 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <nav> 
-    
-        <a href='../'
-    </nav>  -->
+    <header>
+        <h1>Fruit Stand Shopping Cart</h1>
+        <nav>
+            <a href="../">Home</a>
+            <a href="../products">Buy Fruit</a>
+            <a href="./shopping-cart">Shopping Cart</a>
+        </nav>
+    </header>
+<main>
     <table>
         <thead>
              <tr>
                 <th class="align-left">Fruit</th>
-                <th>Qty</th>
+                <th>Quantity</th>
                 <th>Price</th>
                 <th>Total</th>
             </tr>
@@ -41,6 +46,10 @@
                     </tr>
                 </tfoot>
             </table>
-    <script type = "module" src="app.js"></script>
+    <p class="order-noe-cell">
+    <button>Place Order</button>
+    </p>
+</main>
+    <script type = "module" src="shopping-cart.js"></script>
 </body>
 </html>
