stuck on renderlineitem test

--- a/shopping-cart/index.html
+++ b/shopping-cart/index.html
@@ -29,7 +29,7 @@
     
         <tbody>
             <tr>
-                <td>apple</td>
+                <td>spinach</td>
                 <td>4</td>
                 <td>$1.00</td>
                 <td>$4.00</td>
