finished lad 7 w/ little style

--- a/products/index.html
+++ b/products/index.html
@@ -10,6 +10,14 @@
 </head>
 
 <body>
+    <header>
+        <h1>Fruit Stand Shopping Cart</h1>
+            <nav>
+                <a href="../">Home</a>
+                <a href="../products">Buy Fruit</a>
+                <a href="../shopping-cart/index.html">Shopping Cart</a>
+            </nav>
+     </header>
     <h1>Sam's Veggie Stand</h1>
     <h2>Veggies for Sale</h2>
     <ul id="veggie-list"></ul>
