--- a/shopping-cart/index.html
+++ b/shopping-cart/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./products/product.css">
+    <link rel="stylesheet" href="cart-style.css">
     <title>Document</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
         <nav>
             <a href="../">Home</a>
             <a href="../products">Buy Fruit</a>
-            <a href="./shopping-cart">Shopping Cart</a>
+            <a href="../shopping-cart/index.html">Shopping Cart</a>
         </nav>
     </header>
 <main>
