lab 8 submiting but not working

--- a/products/index.html
+++ b/products/index.html
@@ -14,7 +14,7 @@
         <h1>Fruit Stand Shopping Cart</h1>
             <nav>
                 <a href="../">Home</a>
-                <a href="../products">Buy Fruit</a>
+                <a href="./products">Buy Fruit</a>
                 <a href="../shopping-cart/index.html">Shopping Cart</a>
             </nav>
      </header>
