wire frame achieved plus some styling that should be merged with master

--- a/index.html
+++ b/index.html
@@ -21,16 +21,18 @@
 
     <div class="title">Sam's Veggie Stand</div>
 
-    <section class="main-section">
-        <ul>
-            <li class="about-store">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </li>
-            <li class="product"> img </li>
-            <li class="product"> img </li>
-            <li class="product"> img </li>
-        </ul>
-
-    </section>
-
-    
+    <main class="main-section">
+        <p class="about-store">Welcome to Sam's veggie farm stand. All of the produce is organically grown with ethical business practices. We support farm worker's rights and a portion of your purchase today goes towards empowering migrant workers. Come and visit us for our October pumkin patch!</p>
+        <div>
+            <img class="product" src="./data/chard.png">
+            <img class="product" src="./data/kale.png">
+            <img class="product" src="./data/pumpkin.png">
+        </div>
+        <div>
+            <img class="product2" src="./data/spinach.png">
+            <img class="product2" src="./data/yellow-squash.png">
+            <img class="product2" src="./data/zucchini.png">
+        </div>
+    </main>
 </body>
 </html>
