the most working so far

--- a/shopping-cart/index.html
+++ b/shopping-cart/index.html
@@ -12,9 +12,9 @@
     <header>
         <h1>Fruit Stand Shopping Cart</h1>
         <nav>
-            <a href="../">Home</a>
-            <a href="../products">Buy Fruit</a>
-            <a href="../shopping-cart/index.html">Shopping Cart</a>
+            <a href="">Home</a>
+            <a href="../products/index.html">Buy Fruit</a>
+            <a href="./index.html">Shopping Cart</a>
         </nav>
     </header>
 <main>
