linking correct, style has better cascading, still no pages relaying data

--- a/products/index.html
+++ b/products/index.html
@@ -5,21 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../render.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="product.css">
     <title>Veggie Stand</title>
 </head>
 
 <body>
     <header>
-        <h1>Fruit Stand Shopping Cart</h1>
+        <h1>Veggie Stand Products</h1>
             <nav>
-                <a href="../">Home</a>
-                <a href="./products">Buy Fruit</a>
-                <a href="../shopping-cart/index.html">Shopping Cart</a>
+                <a class="nav-bar-home" href="../index.html">Home</a>
+                <a class="nav-bar-other" href="./index.html">Products</a>
+                <a class="nav-bar-other" href="../shopping-cart/index.html">Shopping Cart</a>
             </nav>
      </header>
-    <h1>Sam's Veggie Stand</h1>
-    <h2>Veggies for Sale</h2>
+
     <ul id="veggie-list"></ul>
     <script type='module' src="products.js"></script>
 </body>
