--- a/shopping-cart/index.html
+++ b/shopping-cart/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./products/product.css">
+    <link rel="stylesheet" href="../render.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="cart-style.css">
     <title>Document</title>
 </head>
 <body>
     <header>
-        <h1>Fruit Stand Shopping Cart</h1>
+        <h1>Shopping Cart</h1>
         <nav>
-            <a href="">Home</a>
-            <a href="../products/index.html">Buy Fruit</a>
-            <a href="./index.html">Shopping Cart</a>
+            <a href="../index.html">Home</a>
+            <a class="nav-bar-other" href="../products/index.html">Products</a>
+            <a class="nav-bar-other" href="./index.html">Shopping Cart</a>
         </nav>
     </header>
 <main>
