--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <nav> 
         <ul class="nav-bar-home">
-            <li><a href=" " >Home</a></li>
+            <li><a href="./index.html" >Home</a></li>
         </ul>
         <ul class="nav-bar-other">
-            <li><a href=" " >Products</a></li>
-            <li><a href=" " >Cart</a></li>
+            <li><a href="./products/index.html" >Products</a></li>
+            <li><a href="./shopping-cart/index.html" >Shopping Cart</a></li>
         </ul>
     </nav>
 
