--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div>
             <img class="product" src="./data/chard.png">
             <img class="product" src="./data/kale.png">
-            <img class="product" src="./data/pumpkin.png">
+            <img class="product" src="./data/butternut-squash.png">
         </div>
         <div>
             <img class="product2" src="./data/spinach.png">
