--- a/shopping-cart/index.html
+++ b/shopping-cart/index.html
@@ -30,12 +30,12 @@
         </thead>
     
         <tbody>
-            <tr>
-                <td>spinach</td>
-                <td>4</td>
-                <td>$1.00</td>
-                <td>$4.00</td>
-            </tr>
+            <!-- <tr>
+                <td></td>
+                <td></td>
+                <td>$</td>
+                <td></td>
+            </tr> -->
         </tbody>
                 <tfoot>
                     <tr>
@@ -47,7 +47,7 @@
                 </tfoot>
             </table>
     <p class="order-noe-cell">
-    <button>Place Order</button>
+    <button id="placeOrderButton">Place Order</button>
     </p>
 </main>
     <script type = "module" src="shopping-cart.js"></script>
