--- a/shopping-cart/index.html
+++ b/shopping-cart/index.html
@@ -28,26 +28,19 @@
                 <th>Total</th>
             </tr>
         </thead>
-    
         <tbody>
-            <!-- <tr>
-                <td></td>
-                <td></td>
-                <td>$</td>
-                <td></td>
-            </tr> -->
         </tbody>
-                <tfoot>
-                    <tr>
-                        <th></th>
-                        <th></th>
-                        <th>Order Total:</th>
-                        <th id="order-total-cell"></th>
-                    </tr>
-                </tfoot>
-            </table>
+            <tfoot>
+                <tr>
+                    <th></th>
+                    <th></th>
+                    <th>Order Total:</th>
+                    <th id="order-total-cell"></th>
+                </tr>
+            </tfoot>
+    </table>
     <p class="order-noe-cell">
-    <button id="placeOrderButton">Place Order</button>
+    <button id="place-order-button">Place Order</button>
     </p>
 </main>
     <script type = "module" src="shopping-cart.js"></script>
